# multimodal-translation-pipeline

./: .gitignore  API_DOCUMENTATION.md  MODEL_MANAGER_INTEGRATION.md  Notes.md  README  README.md  README_OLD.md  start.sh
client/: .env.example  .env.local  (+9 more)
services/evaluation/: .gitignore  ALL_FIXES_COMPLETE.md  EVALUATION_FIXES_SUMMARY.md  EVALUATION_GUIDE.md  FIXES_APPLIED.md  FIXES_NEEDED.md  IMPROVEMENTS_SUMMARY.md  ISSUES_TO_FIX.md  PIPELINE_OVERVIEW.md  PROBLEMS_FOUND.md  PROJECT_SUMMARY.md  QUICKSTART.md  README  README.md  README_PIPELINE_COMPARISON.md  SETUP_SUMMARY.md  SIMPLE_USAGE.md  SUMMARY_ISSUES.md  TEST_RUN_GUIDE.md  __init__.py  audio_metrics.py  batch_evaluate.sh  batch_evaluate_all.sh  cli.py  evaluate_pipelines.py  evaluation.py  pipeline.py  pyproject.toml  requirements.txt  run_efik_evaluation.sh  run_full_evaluation.sh  run_pipeline_comparison.py  run_small_pipeline_test.py  run_small_test.py  run_swahili_evaluation.sh  service.py  submit_all_languages.sh  test_visualizations.py  visualizations.py
services/evaluation/_logs/: eval_predictions_100_8780378.out  eval_predictions_500_8780383.out  eval_predictions_8576616.out  eval_predictions_8576656.out  eval_predictions_8578536.out  eval_predictions_8578537.out  eval_predictions_8578538.out  eval_predictions_8578539.out  eval_predictions_8780330.out  eval_test_8565490.out  eval_test_8565496.out  eval_test_8565499.out  eval_test_8565503.out
services/evaluation/blaser/: blaser.py  evaluate.py  finetune_speech_encoder.py  pyproject.toml  speech_econders.py
services/evaluation/comparator/: pipeline_comparator.py
services/evaluation/config/: pipeline_config.py
(+177 files in other folders)
