[project]
name = "translation-evaluation"
version = "0.1.0"
description = "Multimodal translation evaluation system"
requires-python = ">=3.10,<3.13"
dependencies = [
    "sacrebleu>=2.0.0",
    "unbabel-comet>=2.0.0",
    "mel-cepstral-distance>=0.0.4",
    "sonar-space>=0.2.0",
    "torch>=2.0.0",
    "torchaudio",
    "transformers",
    "matplotlib",
    "seaborn",
    "plotly",
    "pandas",
    "numpy",
    "tqdm",
    "click>=8.0",
    "python-dotenv",
    "pyyaml",
    "jinja2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
